--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: update node
 on: 
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
   schedule:
     - cron:  '*/15 * * * *'
